--- a/content/docs/survival/commands.mdx
+++ b/content/docs/survival/commands.mdx
@@ -1,5 +1,7 @@
-title: Panduan Sub-Server Survival 1 & 2
-
+---
+title: Commands
+description: Panduan Sub-Server Survival 1 & 2
+---
 **Survival Mix** adalah mode permainan survival yang menguji kreativitas pemain melalui kerja sama dalam membangun berbagai kreasi. Mode ini menggunakan **ekonomi** sebagai sistem utama perdagangan. Berikut adalah daftar perintah yang dapat digunakan:
 
 ## ✨ Perintah Dasar  
