--- a/content/docs/vanilla/commands.mdx
+++ b/content/docs/vanilla/commands.mdx
@@ -1,5 +1,7 @@
-title: Panduan Dunia Vanilla
-
+---
+title: Commands
+description: Panduan Dunia Vanilla
+---
 **Vanilla** adalah mode permainan bertahan hidup murni yang mengutamakan eksplorasi tanpa sistem ekonomi atau keseimbangan kompleks. Pemain akan menggunakan **sistem barter** dengan ore yang ditemukan di dunia untuk berinteraksi. Berikut adalah daftar perintah penting yang dapat Anda gunakan di dunia Vanilla:
 
 ## ✨ Perintah Dasar  
